config-root/namespaces/jx-staging/jxquickstart/jxquickstart-jxquickstart-deploy.yaml
# Source: jxquickstart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jxquickstart-jxquickstart
  labels:
    draft: draft-app
    chart: "jxquickstart-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jxquickstart'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: jxquickstart-jxquickstart
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jxquickstart-jxquickstart
    spec:
      serviceAccountName: jxquickstart-jxquickstart
      containers:
        - name: jxquickstart
          image: "ghcr.io/turbinefish/jxquickstart:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
