config-root/namespaces/jx-staging/jxquickstart/jxquickstart-ingress.yaml
# Source: jxquickstart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'jxquickstart'
  name: jxquickstart
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: jxquickstart
                port:
                  number: 80
      host: jxquickstart-jx-staging.change.me
